<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/filter_fragment"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_date"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="72dp" />

    <EditText
        android:id="@+id/etBeginDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="date"
        android:ems="10"
        android:hint="@string/begin_date_hint"
        android:layout_marginTop="55dp"
        android:layout_toRightOf="@id/tvBeginDate"/>

    <TextView
        android:id="@+id/tvSortOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_order"
        android:layout_below="@+id/tvBeginDate"
        android:layout_marginTop="46dp"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"/>

    <Spinner
        android:id="@+id/spSortOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/sort_array"
        android:layout_below="@+id/etBeginDate"
        android:layout_toRightOf="@+id/tvSortOrder"
        android:layout_marginTop="22dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/tvNewsDesk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/news_desk_values"
        android:layout_below="@id/tvSortOrder"
        android:layout_marginLeft="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"/>

    <CheckBox
        android:id="@+id/cbArts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/arts_checkbox"
        android:checked="false"
        android:layout_centerVertical="true"
        android:layout_toRightOf="@+id/tvNewsDesk"
        android:layout_toEndOf="@+id/tvNewsDesk"
        android:layout_below="@id/spSortOrder"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="45dp"/>

    <CheckBox
        android:id="@+id/cbFashionAndStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fashion_and_style_checkbox"
        android:layout_below="@+id/cbArts"
        android:layout_alignLeft="@+id/cbArts"
        android:layout_alignStart="@+id/cbArts"
        android:checked="false" />

    <CheckBox
        android:id="@+id/cbSports"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sports_checkbox"
        android:layout_below="@+id/cbFashionAndStyle"
        android:layout_alignLeft="@+id/cbFashionAndStyle"
        android:layout_alignStart="@+id/cbFashionAndStyle"
        android:checked="false" />

</RelativeLayout>